# RealmE-public

./: .gitignore  CMakeLists.txt  README.md
cmakerc/: CMakeRC.cmake
glad/src/: glad.c
glfw-3.3/examples/: heightmap.c
glfw-3.3/src/: cocoa_init.m  egl_context.c  linux_joystick.c  win32_joystick.c  win32_platform.h
glfw-3.3/tests/: vulkan.c
glm/: CMakeLists.txt
lodepng/: CMakeLists.txt
lodepng/include/: lodepng.h
lodepng/src/: lodepng.cpp
spdlog-1.x/tests/: CMakeLists.txt
tilesge/include/: AppWindow.h  Args.h  Body.h  Camera.h  CubeForge.h  Direction.h  Font.h  FontLoader.h  GameApp.h  KeyboardControls.h  Mesh.h  Model.h  (+9 more)
tilesge/src/: AppWindow.cpp  Args.cpp  Body.cpp  CMakeLists.txt  Camera.cpp  CubeForge.cpp  Font.cpp  FontLoader.cpp  GameApp.cpp  KeyboardControls.cpp  Log.cpp  Mesh.cpp  Model.cpp  NewtonianPhysicsProcessor.cpp  Position.cpp  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  ThreadPool.cpp  main.cpp
tilesge/src/engine/: BufferState.cpp  GameObject.cpp  GlobalState.cpp
tilesge/src/game/: CubeForge.cpp  CubeGameApp.cpp  FpsCounter.cpp
tilesge/src/graphics/: AppWindow.cpp  Camera.cpp  Font.cpp  FontLoader.cpp  GraphicsObject.cpp  Mesh.cpp  Model.cpp  Projector.cpp  Shader.cpp  ShaderLoader.cpp  Texture.cpp  TextureLoader.cpp
tilesge/src/input/: KeyboardManager.cpp
tilesge/src/physics/: AABB.cpp  Body.cpp  CollisionService.cpp  NewtonianPhysicsProcessor.cpp
tilesge/src/shaders/: color.glsl  vertex.glsl
tilesge/src/utils/: Args.cpp  Log.cpp  ThreadPool.cpp
(+38 files in other folders)
