cmake_minimum_required(VERSION 3.16)
#set(BUILD_SHARED_LIBS true)
#set(SPDLOG_BUILD_SHARED true)
project(tilesge)

add_subdirectory(tilesge)
add_subdirectory(glad)
add_subdirectory(glfw-3.3)
add_subdirectory(lodepng)
add_subdirectory(glm)
add_subdirectory(freetype-2.10.0)
add_subdirectory(spdlog-1.x)
